# h5db

./: .env  .gitignore  API.md  BUILD_OPTIMIZATION.md  CLAUDE.md  CMakeLists.txt  Makefile  PHASE2_COMPLETE.md  PHASE2_HDF5_INTEGRATION.md  PHASE3_REPORT.md  PHASE4_REPORT.md  PLAN.md  README.md  RSE_USAGE.md  RUN_ENCODING_INVESTIGATION.md  RUN_ENCODING_PLAN.md  STATUS.md  TEST_SUITE_SUMMARY.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: API.md  DEVELOPER.md  README.md  REMOTE_VFD_V2.md  RSE_USAGE.md  USAGE_GUIDE.md  USER_GUIDE.md  get_partition_data_h5db.md  remote_files_design.md  test_audit_report.md
docs/developer/: DEVELOPER.md  UPDATING.md
docs/internals/: H5_READ_ROW_ALIGNMENT.md  H5_TREE_ATTRIBUTES_SPEC.md  PARTITION_OWNERSHIP_DESIGN.md  REMOTE_METADATA_AND_INTERRUPTS.md  REMOTE_VFD_V2.md  SCALAR_VALUE_FUNCTIONS.md  SFTP_SSH_AGENT_AUTH.md
scripts/: create_run_encoded_test.py  create_test_h5.py  install-pre-commit-hook.sh  setup-dev-env.sh
src/: h5_attr.cpp  h5_attributes.cpp  h5_common.cpp  h5_first_file.cpp  h5_functions.cpp  h5_ls.cpp  h5_read.cpp  h5_read_scalar.cpp  h5_read_shared.cpp  h5_read_table.cpp  h5_remote_backend.cpp  h5_remote_vfd.cpp  h5_sftp_secrets.cpp  h5_tree.cpp  h5_tree_shared.cpp  h5db_extension.cpp
src/include/: h5_functions.hpp  h5_internal.hpp  h5_raii.hpp  h5_read_shared.hpp  h5_remote_backend.hpp  h5_remote_vfd.hpp  h5_tree_shared.hpp  h5db_extension.hpp
test/: README.md
test/cpp/: h5fopen_symlink_smoke.cpp
test/data/: README.md  create_100m_benchmark.py  create_attrs_edge_cases.py  create_attrs_test.py  create_benchmark_data.py  create_cache_boundaries_test.py  create_cache_progress_test.py  create_complex_links_test.py  create_empty_scalar_test.py  create_endian_attrs_test.py  create_glob_test.py  create_h5_read_refresh_order_test.py  create_h5_read_string_edge_cases.py  create_h5_tree_scalar_deadlock_test.py  create_h5_tree_traversal_hint_bug.py  create_h5_tree_vector_boundary_test.py  create_huge_benchmark.py  create_invalid_string_array_attrs_test.py  create_large_benchmark.py  create_large_rse_test.py  create_large_test.py  create_links_test.py  create_many_groups_test.py  create_multidim_mismatch_test.py  create_multithreading_test.py  create_names_edge_cases.py  create_nd_cache_test.py  create_partition_ownership_test.py  create_pushdown_test.py  create_ree_edge_cases.py  create_ree_invalid_test.py  create_root_attrs_test.py  create_rse_edge_cases.py  create_rse_invalid_test.py  create_run_encoded_test.py  create_simple_types_multidim.py  create_sparse_partition_pushdown_test.py  create_sparse_pushdown_cache_test.py  create_statement_cache_test.py  create_swmr_test.py  (+11 more)
test/scripts/: range_http_server.py  rewrite_remote_sqllogictests.py  run_remote_tests.sh  run_sftp_interaction_tests.py  run_sftp_tests.sh  run_windows_h5fopen_symlink_smoke.sh  sftp_test_server.py  sftp_test_server_lib.py  sftp_test_server_slow.py  tsan_stress.py
test/sql/: attrs_edge_cases.test  batch_index_plan.test  batch_size_setting.test  (+34 more)
(+52 files in other folders)
